# tree-sitter-familymarkup

./: .gitignore  .npmignore  Cargo.toml  LICENSE  Makefile  Package.swift  README.md  binding.gyp  familymarkup.go  familymarkup_test.go  go.mod  go.sum  grammar.js  package-lock.json  package.json  pyproject.toml  queries.json  setup.py  tree-sitter.json
bindings/c/: tree-sitter-familymarkup.h  tree-sitter-familymarkup.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_familymarkup/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterFamilymarkupTests/: TreeSitterFamilymarkupTests.swift
queries/: highlights.scm
src/: binding.go  grammar.json  node-types.json  parser.c  scanner.c
test/: source.fm
test/corpus/: arrow.txt  eof.txt  names.txt  relations.txt  simple.txt  unknown.txt
test/highlight/: main.fm  main.fml
