[package]
name = "tree-sitter-familymarkup"
description = "FamilyMarkup grammar for tree-sitter"
version = "1.0.0"
license = "BSD 4-Clause"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "familymarkup"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/tree-sitter/tree-sitter-familymarkup"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1.0"

[build-dependencies]
cc = "1.0.87"
